# semstash

./: .gitignore  .pip-audit-ignore.yml  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  vulture_whitelist.py
docs/: index.md  semstash-README.md  semstash-implementation.md
examples/: __init__.py
examples/strands_agent/: __init__.py  agent.py
src/semstash/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  embeddings.py  exceptions.py  markdown.py  mcp_server.py  models.py  storage.py  utils.py  web.py
src/semstash/templates/: base.html  browse.html  chat.html  content.html  dashboard.html  search.html  upload.html
tests/: __init__.py  conftest.py  helpers.py  test_agent.py  test_agent_unit.py  test_cli.py  test_client.py  test_config.py  test_embeddings.py  test_integration.py  test_mcp.py  test_storage.py  test_web.py
tests/samples/: README.md
